--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ Flask-Cors==4.0.0
 flask-smorest==0.44.0
 Flask-SQLAlchemy==3.1.1
 fqdn==1.5.1
+gunicorn==21.2.0
 h11==0.14.0
 httpcore==1.0.4
 httpx==0.27.0
