--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.1
 anyio==4.3.0
 apispec==6.5.0
 appnope==0.1.4
@@ -24,6 +25,7 @@ executing==2.0.1
 fastjsonschema==2.19.1
 Flask==3.0.2
 Flask-Cors==4.0.0
+Flask-Migrate==4.0.7
 flask-smorest==0.44.0
 Flask-SQLAlchemy==3.1.1
 fqdn==1.5.1
@@ -53,6 +55,7 @@ jupyterlab==4.1.3
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.25.3
 jupyterlab_widgets==3.0.10
+Mako==1.3.2
 MarkupSafe==2.1.5
 marshmallow==3.21.0
 matplotlib-inline==0.1.6
